change read file method